<resources>
    <string name="app_name">TNAP</string>
    <string name="full_app_name">The<b>Neighbourhood</b>App</string>
    <string name="splash_description">TheNeighbourHoodApp Logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_register">Register</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_my_events">My Events</string>
    <string name="title_requests">Requests</string>
    <string name="title_profile">Profile</string>
    <string name="title_cc_profile">Community Club Profile</string>
    <string name="title_add_event">Add Event</string>
    <string name="title_show_event">Event Details</string>
    <string name="title_event_start_date">Event Start Date:</string>
    <string name="title_show_rsvp">RSVP Details</string>

    <string name="prompt_nric">NRIC</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthday">Birth Date</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_address">Home Address</string>
    <string name="prompt_cc">Community Centre</string>

    <string name="prompt_cc_address">Address</string>
    <string name="prompt_cc_hours">Opening Hours</string>
    <string name="prompt_cc_writeup">Writeup</string>
    <string name="prompt_cc_description">Description</string>
    <string name="prompt_cc_phone">Phone Number</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_cc_profile">Edit CC Profile</string>
    <string name="edit_event">Edit Event</string>
    <string name="search_bar_text">Search</string>
    <string name="button_see_all">See All ></string>
    <string name="button_logout">Logout</string>
    <string name="button_RSVP">RSVP</string>
    <string name="button_cancel_RSVP">Cancel RSVP</string>

    <string name="action_save_profile">Save Profile</string>
    <string name="action_save_cc_info">Save CC Info</string>

    <string name="action_call_cc">Contact Us</string>

    <!-- Events -->
    <string name="action_add_event">Add New Event</string>
    <string name="action_save_event">Save Event</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="action_rsvp_event">RSVP</string>

    <string name="prompt_event_name">Event Name</string>
    <string name="prompt_event_desc">Description</string>
    <string name="prompt_event_venue">Venue</string>
    <string name="prompt_event_capacity">Capacity</string>
    <string name="prompt_event_registerby">Register By</string>
    <string name="prompt_event_start">Start Date/Time</string>
    <string name="prompt_event_end">End Date/Time</string>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="cc_array">
        <item>Community Centre</item>
        <item>Senja-Cashew CC</item>
        <item>Computing CC</item>
        <item>Business CC</item>
    </string-array>

    <string name="hello_main_fragment">Loading your CC...</string>
    <string name="loading">Loading...</string>
    <string name="no_events">No events</string>
    <string name="hello_events_fragment">Hello events fragment</string>
    <string name="hello_profile_fragment">Loading your profile...</string>
    <string name="hello_requests_fragment">Hello requests fragment</string>
</resources>
