<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_dark">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/ic_requests_black"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black"
        android:title="@string/title_profile" />

</menu>
