<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCCInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:paddingTop="25dp"
        android:paddingBottom="80dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/cc_info_save_button"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            tools:context="nap.orbital2018.com.tnap.EditCCInfoActivity">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/accent">

                <AutoCompleteTextView
                    android:id="@+id/update_cc_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cc_address"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/accent"
                    android:textIsSelectable="false"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/accent">

                <AutoCompleteTextView
                    android:id="@+id/update_cc_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cc_phone"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/accent"
                    android:textIsSelectable="false"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/accent">

            <AutoCompleteTextView
                    android:id="@+id/update_cc_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cc_hours"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/accent"
                    android:textIsSelectable="false"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/accent">

                <MultiAutoCompleteTextView
                    android:id="@+id/update_cc_writeup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cc_writeup"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/accent"
                    android:textIsSelectable="false"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/cc_info_save_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray_buttons"
        android:onClick="saveUpdates"
        android:text="@string/action_save_cc_info"
        android:textColor="@color/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold" />


</android.support.constraint.ConstraintLayout>